--- a/core/src/main/res/values-in/strings.xml
+++ b/core/src/main/res/values-in/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="search_notes">Cari catatan</string>
     <string name="no_notes">Kamu belum memiliki catatan</string>
+    <string name="title">Judul</string>
+    <string name="description">Deksripsi</string>
+    <string name="save">Simpan</string>
 </resources>
