--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="search_notes">Search notes</string>
     <string name="no_notes">You have no notes yet</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="save">Save</string>
 </resources>
