--- a/core/src/main/res/values-in/strings.xml
+++ b/core/src/main/res/values-in/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="search_notes">Cari catatan</string>
-    <string name="no_notes">Kamu belum memiliki catatan</string>
+    <string name="no_notes">Belum ada catatan</string>
     <string name="title">Judul</string>
     <string name="description">Deksripsi</string>
     <string name="save">Simpan</string>
