--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="search_notes">Search notes</string>
-    <string name="no_notes">You have no notes yet</string>
+    <string name="no_notes">No notes yet</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="save">Save</string>
