--- a/core/src/main/res/values-in/strings.xml
+++ b/core/src/main/res/values-in/strings.xml
@@ -2,6 +2,8 @@
 <resources>
     <string name="search_notes">Cari catatan</string>
     <string name="no_notes">Belum ada catatan</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Hapus</string>
     <string name="add_note">Tambah Catatan</string>
     <string name="edit_note">Edit Catatan</string>
     <string name="title">Judul</string>
