--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="no_notes">No notes yet</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="delete_note">Delete Note</string>
+    <string name="delete_note_confirm_msg">Are you sure to delete this note?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="add_note">Add Note</string>
     <string name="edit_note">Edit Note</string>
     <string name="title">Title</string>
