--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">ToNotes</string>
     <string name="search_notes">Search notes</string>
     <string name="no_notes">No notes yet</string>
     <string name="edit">Edit</string>
