--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="have_no_account">Don\'t have an account?</string>
+    <string name="fill_the_form">Please fill the form completely</string>
+    <string name="incorrect_username_or_pass">Username or password is incorrect</string>
+    <string name="something_wrong_happened">Sorry, something wrong happened</string>
 
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
