--- a/core/src/main/res/values-in/strings.xml
+++ b/core/src/main/res/values-in/strings.xml
@@ -6,13 +6,17 @@
     <string name="no_notes">Belum ada catatan</string>
     <string name="need_to_login">Perlu Masuk</string>
     <string name="need_to_have_an_account">Kamu memerlukan akun untuk mencadangkan catatan</string>
-    <string name="login">Masuk</string>
     <string name="cancel">Batalkan</string>
+    <string name="login">Masuk</string>
+    <string name="register">Daftar</string>
 
     <string name="username">Username</string>
+    <string name="name">Nama</string>
     <string name="password">Kata Sandi</string>
     <string name="have_no_account">Belum punya akun?</string>
     <string name="register_here">Daftar di sini</string>
+    <string name="have_account">Sudah punya akun?</string>
+    <string name="login_here">Masuk di sini</string>
     <string name="fill_the_form">Mohon isi form dengan lengkap</string>
     <string name="incorrect_username_or_pass">Username atau password salah</string>
     <string name="something_wrong_happened">Maaf, terjadi kesalahan</string>
