Add data layer for notes sync feature

--- a/core_ui/src/main/res/values-in-rID/strings.xml
+++ b/core_ui/src/main/res/values-in-rID/strings.xml
@@ -27,6 +27,7 @@
     <string name="daily">Harian</string>
     <string name="weekly">Mingguan</string>
     <string name="back_up">Cadangkan</string>
+    <string name="notes_sync_successfully">Catatan berhasil disinkronkan</string>
 
     <string name="edit">Edit</string>
     <string name="delete">Hapus</string>
