Update sync notes flow

--- a/core_ui/src/main/res/values-in-rID/strings.xml
+++ b/core_ui/src/main/res/values-in-rID/strings.xml
@@ -5,7 +5,7 @@
     <string name="search_notes">Cari catatan</string>
     <string name="no_notes">Belum ada catatan</string>
     <string name="need_to_login">Perlu Masuk</string>
-    <string name="need_to_have_an_account">Kamu memerlukan akun untuk mencadangkan catatan</string>
+    <string name="need_to_have_an_account">Kamu memerlukan akun untuk menggunakan fitur ini</string>
     <string name="cancel">Batalkan</string>
     <string name="login">Masuk</string>
     <string name="register">Daftar</string>
